--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,7 @@
             width: 100%;
         }
     </style>
-        <main class="know-about-us">
+        <main class="know-about-us" id="main-body">
             <section class="about-us">
                 <div class="about-content">
                     <h1 style="font-size: 24px;">Meet Our Leaders</h1>
@@ -58,7 +58,7 @@
                             <p>Our mission is to awaken the Zoe, god-kind of life in every man on the earth, to manifest and demonstrate the authority and power of God through the knowldge of <b>Jesus Christ.</b></p>
                         </div>
                         <div class="ambitions fade-in lozad" id="church">
-                            <h3>Our Mision</h3>
+                            <h3>Our Mission</h3>
                             <p>Our mission is to win souls for <b>Christ</b> by any means possible through His saving knowledge and redemptive life-transforming power.</p>
                         </div>
 
