--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/gallery.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
 
-        <main class="container">
+        <main class="container" id="main-body">
             <section class="gallery">
                 <h1>Photo</h1>
                 <div class="main-gallery">
