--- a/templates/events.html
+++ b/templates/events.html
@@ -6,7 +6,7 @@
     <title>Events</title>
     <link rel="stylesheet" href="{% static 'css/events.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
-        <main class="events-section">
+        <main class="events-section" id="main-body">
             <section class="events">
                 <h1>Recent Events</h1>
                 <div class="recent-events-session">
