--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -9,7 +9,7 @@
 
         <main class="container" id="main-body">
             <section class="gallery">
-                <h1>Photo</h1>
+                <h1>ENJOY THE VIEW</h1>
                 <div class="main-gallery">
                     {% for img in images %}
                     <div class="top-img-block">
