--- a/templates/index.html
+++ b/templates/index.html
@@ -38,16 +38,16 @@
 
             {% block content %}
             <div class="hero-banner">
-                <div class="hero-banner-comps" style="display:block; text-align:center; justify-content: center;">
-                    <h1 style="color: rgb(255, 255, 255); font-size:32px; padding-bottom: 10px;">Welcome to Prophet Cofie PowerMan Bekoe Ministries</h1>
-                    <p>No weapon that is formed against thee shall prosper; and every tongue that shall rise agianst thee in judgement thou shalt condemn. This is the heritage of the servants of the LORD, and their righteousness is of me, saith the LORD - ISAIAH 54:17</p>
-                    <a style="border: 3px solid #44a2bc;background: transparent; padding: 8px 20px;color: #44a2bc; border-radius: 15px;" href="{% url 'events' %}">CONNECT</a>
+                <div class="hero-banner-comps">
+                    <h1>Welcome to Prophet Cofie PowerMan Bekoe Ministries</h1>
+                    <p>No weapon that is formed against thee shall prosper; and every tongue that shall rise agianst thee in judgement thou shalt condemn. This is the heritage of the servants of the LORD, and their righteousness is of me, saith the LORD - ISAIAH 54:17</p><br>
+                    <a href="{% url 'events' %}">CONNECT &rarr;</a>
                 </div>
             </div>
         </header>
 
         <main id="main-body" style="">
-            <h1 style="font-size: 24px; color: #44a2bc;">ABOUT US</h1>
+            <h1 style="font-size: 20px; color: #44a2bc;">ABOUT US</h1>
             <div class="main-items">
                 <div class="about-text-side lazy fade-in">
                     <p>We are an assignment of God established upon the earth to fulfill the will of God.</p>
