--- a/templates/events.html
+++ b/templates/events.html
@@ -17,7 +17,7 @@
                         <div class="option-two fade-in">
                             <h2>{{event_.event.name}}</h2>
                             <p>{{event_.event_details | truncatewords:60}}</p>
-                            <a href="#">Details</a>
+                            <a href="#">Details &rarr;</a>
                         </div>
                     </div>
                     {% else %}
@@ -25,7 +25,7 @@
                         <div class="option-two fade-in">
                             <h2>Midweek Service</h2>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt quisquam officiis, quaerat soluta necessitatibus impedit, explicabo, animi repellendus cumque dicta iste sequi in! Non quam necessitatibus ad corporis labore facere quasi accusamus maxime, cumque dolore ducimus hic reiciendis! Est soluta necessitatibus sequi molestiae molestias labore itaque possimus culpa consequuntur praesentium commodi facilis ut omnis delectus veritatis libero odit tempore distinctio, adipisci aperiam magni consectetur! Dolorem nesciunt assumenda error quam cum alias delectus provident laboriosam? Architecto ut rem rerum natus quos! Animi, modi quo. Harum labore sequi qui tempora possimus officiis? Eius suscipit blanditiis quibusdam repellat laborum ipsum esse deleniti nam error? Modi rem labore, sapiente quaerat dignissimos eos id sit, aliquid aperiam odio sunt enim error nisi. Id, veritatis nostrum?</p>
-                            <a href="#">Details</a>
+                            <a href="#">Details &rarr;</a>
                         </div>
                         <img class="fade-in" src="{% static './img/prayerfulsmile.jpg' %}" alt="event-image-right">
                     </div>  
