--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
             {% block content %}
             <div class="hero-banner">
                 <div class="hero-banner-comps">
-                    <h1>Welcome to Prophet Cofie PowerMan Bekoe Ministries</h1>
+                    <h1>WELCOME TO PROPHET COFIE POWERMAN BEKOE MINISTRY</h1>
                     <p>No weapon that is formed against thee shall prosper; and every tongue that shall rise agianst thee in judgement thou shalt condemn. This is the heritage of the servants of the LORD, and their righteousness is of me, saith the LORD - ISAIAH 54:17</p><br>
                     <a href="{% url 'events' %}">CONNECT &rarr;</a>
                 </div>
@@ -100,7 +100,7 @@
     <footer class="footer-area">
         <div class="footer-items">
             <div class="footer lozad">
-                <h2>Address</h2>
+                <h2>ADDRESS</h2>
                 <p>POST OFFICE BOX TI515</p>
                 <p>ACCRA WEST, GHANA</p>
                 <br>
@@ -108,12 +108,12 @@
                 <p>Email: cofiebekoeministries@gmail.com</p>
             </div>
             <div class="footer lozad">
-                <h2>Church Hours</h2>
+                <h2>CHURCH HOURS</h2>
                 <p>Days: Monday - Sunday</p>
                 <p>Time: 8am - 4pm</p>
             </div>
             <div class="footer lozad">
-                <h2>Follow Us</h2>
+                <h2>FOLLOW US ON SOCIALS</h2>
                 <span class="social-links">
                     <a href="#"><img src="{% static './img/facebk.svg' %}" alt=""></a>
                     <a href="#"><img src="{% static './img/twitter.svg' %}" alt=""></a>
