--- a/templates/about.html
+++ b/templates/about.html
@@ -77,7 +77,7 @@
                         <p>Accra West, Ghana</p>
                     </div>
                 </div>
-                <div class="contact-form">
+                <div class="contact-form" id="contact">
                     <form action="" method="post">
                         {% csrf_token %}
                         <label for="Full Name">Full Name</label>
