--- a/church/static/css/style.css
+++ b/church/static/css/style.css
@@ -187,7 +187,7 @@ h1, h2, h3, h4 {
 .about-text-side h1{
     margin-bottom: 10px;
     font-size: 24px;
-    color: #44a2bc;
+    /* color: #44a2bc; */
 }
 
 .about-image-side{
@@ -352,68 +352,129 @@ h1, h2, h3, h4 {
 .image-gallery h1{
     margin: 20px 0;
     font-size: 20px;
-    color: #44a2bc;
+    /* color: #44a2bc; */
 }
 
-.main-events-section{
+/* recent sermon section */
+.recent-sermon{
     margin-top:30px;
     padding-bottom: 30px;
 }
-.main-events-section h1 {
-    margin: 20px 0;
+.recent-sermon h1 {
+    margin: 40px 0;
     font-size: 20px;
-    color: #44a2bc;
 }
 
-.upcoming-events-section{
+.past-sermon-section{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
     gap: 20px;
 }
 
+.sermon-section{
+    color: #eefdfb;
+    display: block;
+    align-items: center;
+    justify-content: center;
+}
+
+.sermon{
+    padding: 10px;
+    margin: 8px;
+}
+
+.sermon p{
+    background-color: #d8f3fae3;
+    padding: 10px;
+}
+
+.sermon img{
+    width: 100%;
+    height: 100%;
+}
+.sermon a{
+    text-decoration: none;
+    color: black;
+}
+
+
+/* recent event and weekly services */
+.main-events-section{
+    margin-top:10px;
+    padding-bottom: 10px;
+}
+.main-events-section h1 {
+    margin: 20px 0;
+    font-size: 20px;
+    /* color: #44a2bc; */
+}
+
+.upcoming-events-section{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    gap: 20px;
+    margin: 20px 80px;
+}
 
 .main-upcoming-events{
-    border-right: 3px solid rgb(35, 169, 202);
+    color: #eefdfb;
     display: grid;
-    border-radius: 5px;
-    grid-template-rows: 1fr 1fr;
-    background-color: rgba(250, 246, 242, 0.767);
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(134, 2, 35, 0.767);
     border: 1px solid rgb(179, 167, 167);
-    height: 40vh;
 }
 
-.main-upcoming-events:hover {
-    background:linear-gradient(to right, rgba(255, 141, 236, 0.932), #ccfff6);
-}
+
 .main-upcoming-events:first-child{
-    background:linear-gradient(to right, #a5b2f3, rgba(218, 252, 225, 0.938));
+    background-color: #01305B;
 }
 
-.main-upcoming-events .date{
-    color: #000000;
-    font-size: 20px;
-    line-height: 1.5mm;
-    padding: 5px;
+
+.major-upcoming-event{
+    background-color: #adefffe1;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
 }
 
-.main-upcoming-events .venue{
-    color: #040505;
-    font-size: 20px;
-    padding: 5px;
+.major-upcoming-event a{
+    text-decoration: none;
+    color: rgb(46, 66, 73);
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 15px;
+    padding: 5px 30px;
+    width: min-content;
 }
+
+.major-upcoming-event a:hover{
+    background-color: #eefdfb;
+    color: black;
+    transition: 1s;
+}
+
 .venue h3{
     font-size: 16px;
 }
+.venue{
+    padding: 30px;
+}
+
 
 /* Footer */
 
 .footer-area{
+    background: linear-gradient(to right, #01305bc9, #001374c4), url(/static/img/temple.jpeg) no-repeat;
+
     width: 100%;
-    background-color: #01305B;
     padding: 20px;
     color: white;
-    /* border:#c5011b 2px solid; */
+    background-position: center;
+    background-size: cover;
 }
 
 .footer-items{
@@ -423,7 +484,6 @@ h1, h2, h3, h4 {
     padding: 10px;
     width: 100%;
 }
-
 
 
 .footer{
@@ -455,13 +515,37 @@ h1, h2, h3, h4 {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
-        width: 100%;
+        margin: 20px auto;
+    }
+
+    .past-sermon-section {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        margin: 10px auto;
+    }
+    .recent-sermon{
+        margin-top:0px;
+        /* padding-bottom: 10px; */
+    }
+    .recent-sermon h1 {
+        margin: 20px 0;
     }
 
     .footer-items {
         display: grid;
         grid-template-rows: 1fr;
         grid-template-columns: 1fr;
+    }
+
+    .major-upcoming-event{
+        display: block;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+    }
+    .major-event{
+        margin-bottom: 10px;
     }
 
 }
