polishing the site

--- a/church/static/css/give.css
+++ b/church/static/css/give.css
@@ -5,6 +5,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
+    font-size: 28px;
+}
+
+.accounts p{
+    font-size: 20px;
 }
 
 .container{
@@ -15,3 +20,13 @@
 .container{
     background-color: rgb(255, 255, 255);
 }
+
+@media screen and (max-width:600px){
+    .body-section{
+        padding: 10px;
+        display: block;
+        justify-content: flex-start;
+
+    }
+}
+
