--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@
         <main class="know-about-us" id="main-body">
             <section class="about-us">
                 <div class="about-content">
-                    <h1 style="font-size: 24px;">Meet Our Leaders</h1>
+                    <h1>MEET OUR LEADERS</h1>
                     <div class="our-leaders">
                         <div class="our-leaders-indiv fade-in">
                            <img src="{% static './img/beautiful worship.jpg' %}" alt="our leaders">
@@ -36,17 +36,17 @@
                 </div>
                 <div class="about-content">
                     <div class="about-left-text-area">
-                        <h1 style="font-size: 24px;">Attributes we Possess</h1>
+                        <h1>ATTRIBUTES WE POSSESS</h1>
                         <div class="about-links">
-                            <a href="#church">Our Church</a>
-                            <a href="#vision">Our Vision</a>
-                            <a href="#mission">Our Mission</a>
+                            <h1><a href="#church">Our Church</a></h1>
+                            <h1><a href="#vision">Our Vision</a></h1>
+                            <h1><a href="#mission">Our Mission</a></h1>
                         </div>                 
                     </div>
 
                     <div class="about-right-text-area">
                         <div id="vision" class="ambitions fade-in">
-                            <h3>Our Church</h3>
+                            <h1>Our Church</h1>
                             <p>Welcome to Cofie Bekoe Ministries.</p>
                             <p>We are a home for the godly, focused on spreading the knowldge of the glory of God to the world; the supreme invaluable knowledge of <b>Jesus Christ!</b></p>
                             <p>Here, you will find answers to all the questions you may have about 
@@ -54,11 +54,11 @@
                             </p>
                         </div>
                         <div class="ambitions fade-in" id="mission">
-                            <h3>Our Vision</h3>
+                            <h1>Our Vision</h1>
                             <p>Our mission is to awaken the Zoe, god-kind of life in every man on the earth, to manifest and demonstrate the authority and power of God through the knowldge of <b>Jesus Christ.</b></p>
                         </div>
                         <div class="ambitions fade-in lozad" id="church">
-                            <h3>Our Mission</h3>
+                            <h1>Our Mission</h1>
                             <p>Our mission is to win souls for <b>Christ</b> by any means possible through His saving knowledge and redemptive life-transforming power.</p>
                         </div>
 
@@ -67,7 +67,7 @@
             </section>
             <section class="contact-section">
                 <div>
-                    <h1 style="font-size: 24px;">Contact Us</h1>
+                    <h1 style="font-size:32px;">CONTACT US</h1>
                     <div class="contact-details">
                         <p><b>Prophet Cofie PowerMan Bekoe</b></p>
                         <p>Email: cofiebekoeministries@gmail.com</p>
