--- a/templates/events.html
+++ b/templates/events.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
         <main class="events-section" id="main-body">
             <section class="events">
-                <h1>Recent Events</h1>
+                <h1>RECENT EVENTS</h1>
                 <div class="recent-events-session">
                     {% for event_ in recents %}
                     {% if event_ %}
@@ -32,7 +32,7 @@
                     {% endif %}            
                     {% endfor %}
                 </div>
-                <h1>Upcoming Events</h1>
+                <h1>UPCOMING EVENTS</h1>
                 <div class="upcoming-events">
 
                     {% for event in events %}
