--- a/church/static/css/style.css
+++ b/church/static/css/style.css
@@ -7,6 +7,11 @@
 #main-body{
     border: 1px solid rgb(196, 176, 176);
 }
+#main-body h1{
+    font-size:32px;
+    text-align:center;
+}
+
 
 body{
     width: 100%;
@@ -16,8 +21,9 @@ p{
     font-family: 'TT Firs Neue Trl Light';
     font-size: 16px;
 }
-h1, h2, h3, h4 {
+h1 {
     font-family: 'TT Firs Neue Trl Light';
+    font-size: 32px;
 }
 
 
@@ -188,6 +194,7 @@ h1, h2, h3, h4 {
     margin-bottom: 10px;
     font-size: 24px;
     /* color: #44a2bc; */
+    text-align:center;
 }
 
 .about-image-side{
@@ -351,8 +358,9 @@ h1, h2, h3, h4 {
 
 .image-gallery h1{
     margin: 20px 0;
-    font-size: 20px;
+    font-size: 32px;
     /* color: #44a2bc; */
+    text-align: center;
 }
 
 /* recent sermon section */
@@ -362,7 +370,8 @@ h1, h2, h3, h4 {
 }
 .recent-sermon h1 {
     margin: 40px 0;
-    font-size: 20px;
+    font-size: 32px;
+    text-align:center;
 }
 
 .past-sermon-section{
@@ -393,7 +402,7 @@ h1, h2, h3, h4 {
 .sermon p:hover{
     background-color: #8d8d8de3;
     transition:2s;
-        
+    color: rgb(46, 46, 243);    
 }
 
 .sermon img{
@@ -413,8 +422,9 @@ h1, h2, h3, h4 {
 }
 .main-events-section h1 {
     margin: 20px 0;
-    font-size: 20px;
+    font-size: 32px;
     /* color: #44a2bc; */
+    text-align: center;
 }
 
 .upcoming-events-section{
@@ -556,11 +566,6 @@ h1, h2, h3, h4 {
     }
 
 }
-
-
-
-
-
 
 
 
