--- a/templates/rsvp-popup.html
+++ b/templates/rsvp-popup.html
@@ -36,39 +36,39 @@
         <div class="row">
             <h1>MINISTER FOR TODAY'S PROGRAM</h1><hr>
             <div class="col-sm">
+        
                 <div class="rsvp">
-                {% if events  %}
                     <div class="event-title-date">
-                        <h2>BRAINSTORMING SESSION</h2>
-                        <p>25th February, 2023</p>
+                        <h2>{{event.name}}</h2>
+                        <p>{{event.event_date}}</p>
                     </div>
-                    <img src="/static/img/the word.jpg" alt="event image">
-                {% endif %}
+                    <img src="{{event.event_poster.url}}" alt="event image">
                 </div>
                 <div class="card">
                     <h2>MINISTER DETAILS</h2>
-                    <h4>{{rsvp.designation}} {{rsvp.rs_vp}}</h4>
-                    <p>{{rsvp.contact}}</p>
+                    <h4>{{event.rsvp.designation}} {{event.rsvp.rs_vp}}</h4>
+                    <p>{{event.rsvp.contact}}</p>
 
-                    <p>{{rsvp.designation}}</p>
+                    <p>{{event.rsvp.designation}}</p>
                 </div>
+        
             </div>
         </div>
     </div>    
     <div class="card-header">
 
+        {% for event in events %}
+        <div class="upcoming-event-objects fade-in">
+            <img src="{{event.event_poster.url}}" alt="event-three">
+            <div>
+                <h2>{{event.event_date|date:"jS"}}</h2>
+                <p style="text-transform:capitalize;">{{event.event_date|date:"F"}}</p>
+            </div>
+                <h2>{{ event.name|upper }}</h2>
+                <a href="{% url 'rsvp' event.rsvp.pk %}">RSVP</a>
+        </div>
+        {% endfor %}
     </div>
 </body>
 {% endblock content %}
 
-                    {% for event in events %}
-                    <div class="upcoming-event-objects fade-in">
-                        <img src="{{event.event_poster.url}}" alt="event-three">
-                        <div>
-                            <h2>{{event.event_date|date:"jS"}}</h2>
-                            <p style="text-transform:capitalize;">{{event.event_date|date:"F"}}</p>
-                        </div>
-                            <h2>{{ event.name|upper }}</h2>
-                            <a href="{% url 'rsvp' event.rsvp.pk %}">RSVP</a>
-                    </div>
-                    {% endfor %}
