--- a/church/static/css/style.css
+++ b/church/static/css/style.css
@@ -257,6 +257,11 @@ h1 {
         padding: 12px 50px;
     }
 
+    .sermon iframe{
+        width:100%;
+
+    }
+
     .nav-elements{
         display: grid;
         grid-template-columns: 1fr;
@@ -505,16 +510,28 @@ h1 {
 
 .footer{
     margin-bottom: 20px;
+    display: block;
+    justify-content: flex-start;
 }
 
 .footer p{
     font-size: 16px;
 }
 
+.footer img{
+    width: 20px;
+    height: 20px;
+    /* background-color: white; */
+    color: white;
+}
+
 .social-links img {
     width: 40px;
     height: 30px;
-    color: #c3e5e8;
+    color: #ffffff;
+    border-radius: 100%;
+    z-index: 1;
+    position: relative;
 }
 
 @media screen and (max-width:600px) {
