--- a/templates/about.html
+++ b/templates/about.html
@@ -37,11 +37,11 @@
                 <div class="about-content">
                     <div class="about-left-text-area">
                         <h1>ATTRIBUTES WE POSSESS</h1>
-                        <div class="about-links">
+                        {% comment %} <div class="about-links">
                             <h1><a href="#church">Our Church</a></h1>
                             <h1><a href="#vision">Our Vision</a></h1>
                             <h1><a href="#mission">Our Mission</a></h1>
-                        </div>                 
+                        </div>                  {% endcomment %}
                     </div>
 
                     <div class="about-right-text-area">
@@ -65,9 +65,9 @@
                     </div>
                 </div>
             </section>
+                    <h1 style="font-size:32px;">CONTACT US</h1>
             <section class="contact-section">
                 <div>
-                    <h1 style="font-size:32px;">CONTACT US</h1>
                     <div class="contact-details">
                         <p><b>Prophet Cofie PowerMan Bekoe</b></p>
                         <p>Email: cofiebekoeministries@gmail.com</p>
@@ -77,6 +77,7 @@
                         <p>Accra West, Ghana</p>
                     </div>
                 </div>
+                
                 <div class="contact-form" id="contact">
                     <form action="" method="post">
                         {% csrf_token %}
