--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <title>PROPHET COFIE POWERMAN BEKOE MINISTRY</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -62,7 +63,7 @@
                 </div>
 
             </div>
-
+{% comment %} 
             <div class="image-gallery">
                 <h1>VIEWS FROM OUR WEEKLY SESSIONS</h1>
                 <div class="images-comps">
@@ -71,7 +72,7 @@
                     <img class="lazy fade-in" src="{{img.image.url}}" alt="{{img.caption}}">
                     {% endfor %}                    
                 </div>
-            </div>
+            </div> {% endcomment %}
 
             <div class="recent-sermon">
                 <h1>RECENT SERMONS</h1>
@@ -79,7 +80,8 @@
 
                     <div class="sermon-section lazy fade-in">
                         <div class="sermon">
-                            <img src="/static/img/the word.jpg" alt="sermon thumbnail" srcset="">
+                            <iframe src="/static/img/video.mp4" alt="sermon thumbnail" srcset=""frameborder='0' height='320px' width='100%' scrolling='no' src='http://currentlyobsessed.me/api/v1/get_widget?wid=30&blog=Brighton+The+Day&widgetid=38585' frameborder="0" autoplay="True" allowfullscreen></iframe>
+                            
                         </div>
                     </div>
 
@@ -146,12 +148,12 @@
     <footer class="footer-area">
         <div class="footer-items">
             <div class="footer lozad">
-                <h1>ADDRESS</h1>
-                <p>POST OFFICE BOX TI515</p>
-                <p>ACCRA WEST, GHANA</p>
+                <h1>CONTACT INFO</h1>
+                <p><img src="/static/img/user.svg" alt="">  Cofie Bekoe Ministries</p>
+                <p><img src="/static/img/house-solid.svg" alt="">  Taifa, Hallelujah Junction</p>
                 <br>
-                <p>Phone: +233556978861</p>
-                <p>Email: cofiebekoeministries@gmail.com</p>
+                <p><img src="/static/img/phone-solid.svg" alt="">  +233556978861</p>
+                <p><img src="/static/img/mail.png" alt="">  cofiebekoeministries@gmail.com</p>
             </div>
             <div class="footer lozad">
                 <h1>CHURCH HOURS</h1>
@@ -159,11 +161,12 @@
                 <p>Time: 8am - 4pm</p>
             </div>
             <div class="footer lozad">
-                <h1>FOLLOW US ON SOCIALS</h1>
+                <h1>FIND US ON SOCIAL MEDIA</h1>
                 <span class="social-links">
-                    <a href="#"><img src="{% static './img/facebk.svg' %}" alt=""></a>
+                    <a href="#"><img src="/static/img/facebook.svg" alt="">
+                    </a>
                     <a href="#"><img src="{% static './img/twitter.svg' %}" alt=""></a>
-                    <a href="#"><img src="{% static './img/insta.svg' %}" alt=""></a>
+                    <a href="#"><img src="{% static './img/instagram.svg' %}" alt=""></a>
                     <a href="#"><img src="{% static './img/youtube.svg' %}" alt=""></a>
                 </span>
             </div>
